additional changes Additional changes and merges/deletions of old code base. Project is nor orderly structured

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-</head>
-<body>
-    <h1>Index to Szapp-Pflapp</h1>
-    <a href="/imprint">Imprint</a>
-</body>
+<html lang="de">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Startseite</title>
+        <link rel="stylesheet" href="../static/css/style_01.css">
+        <style>
+
+        </style>
+    </head>
+
+    <body>
+        <h1>Szapp Pflapp</h1>
+
+        <div id="divShortDescr">
+            <p>
+                Szapp Pflapp ist ein Tool zur Bewässerungskontrolle deiner Pflanzen. Jede Pflanze kann eingetragen
+                werden
+                und du kannst ihren Bewässerungsstatus fortan Tag und Nacht über diese Webseite im Auge behalten. Nie
+                wieder wirst du dich fragen, welche Pflanzen gegossen werden müssen und welche nicht. Nie wieder wirst
+                du
+                Wasser verschwenden oder deine Pflanzen ertränken weil du mal wieder zu viel gegossen hast. Szapp Pflapp
+                revolutioniert deinen Pflanzen Haushalt und nimmt dir die Arbeit ab!
+            </p>
+        </div>
+
+        <a href="/imprint"><button id="btnStart" role="button">Starten</button></a>
+    </body>
+
 </html>
