--- a/server/templates/imprint.html
+++ b/server/templates/imprint.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imprint</title>
-</head>
-<body>
-    <h1>Imprint to Szapp-Pflapp</h1>
-</body>
+<html lang="de">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Impressum</title>
+        <link rel="stylesheet" href="../static/css/style_01.css">
+    </head>
+
+    <body>
+        <p class="heading"><strong>Impressum</strong></p>
+        <p>
+            Szapp Pflapp GmbH<br>
+            Kaiserstraße 42<br>
+            76133 Karlsruhe
+        </p>
+        <p>
+            Kontakt:<br>
+            Telefon: 0721 98279657<br>
+            Telefax: 0611 9720990<br>
+            E-Mail: niklas.karl.guenter.trenz@longmail.ky<br>
+        </p>
+        <p>
+            Bei rechtlichen Anliegen:<br>
+            Verantwortlich nach § 55 Abs.2 RStV<br>
+            Niklas Trenz<br>
+            Karl-Günter-Weg 69<br>
+            67346 Speyer
+        </p>
+    </body>
+
 </html>
