update to be conform with nu html checker

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -27,7 +27,8 @@
             </p>
         </div>
 
-        <a href="/imprint"><button id="btnStart" role="button">Starten</button></a>
+        <form method="get" action="/imprint">
+            <button id="btnStart">Starten</button>
+        </form>
     </body>
-
 </html>
