--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -27,7 +27,7 @@
             </p>
         </div>
 
-        <form method="get" action="/imprint">
+        <form method="get" action="/main_page">
             <button id="btnStart">Starten</button>
         </form>
     </body>
