SP-24 working version of backend the backend is now partially working you can read the db now

--- a/server/templates/main_page.html
+++ b/server/templates/main_page.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/style_01.css">
     <title>Szapp Pflapp</title>
+    <link rel="icon" type="image/x-icon" href="../static/img/001-botanic.svg">
+    <script
+        src="http://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous">
+    </script>
 </head>
 <body>
     <h1>Szapp-Pflapp</h1>
     <div class="container">
         <!-- macht ihr hier einfach mal ein heading -->
-        <div class="plants_container"> 
+        <div id="plants_container"> 
             <!-- 
                 in diesen container kommen die Pflanzen daten rein
                 wird über die api und js geregelt
@@ -29,4 +35,5 @@
         <a href="/imprint">Imprint</a>
     </footer>
 </body>
+<script src="static/js/main.js"></script>
 </html>
