--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -5,11 +5,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Startseite</title>
         <link rel="stylesheet" href="../static/css/style_01.css">
-        <style>
-
-        </style>
+        <title>Szapp Pflapp</title>
+        <link rel="icon" type="image/x-icon" href="../static/img/001-botanic.svg">
     </head>
 
     <body>
@@ -31,4 +29,5 @@
             <button id="btnStart">Starten</button>
         </form>
     </body>
+
 </html>
