--- a/server/templates/main_page.html
+++ b/server/templates/main_page.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/style_01.css">
+    <link rel="stylesheet" href="../static/css/main.css">
     <title>Szapp Pflapp</title>
     <link rel="icon" type="image/x-icon" href="../static/img/001-botanic.svg">
     <script
@@ -15,7 +16,7 @@
 </head>
 <body>
     <h1>Szapp-Pflapp</h1>
-    <div class="container">
+    <div class="plantlist">
         <!-- macht ihr hier einfach mal ein heading -->
         <div id="plants_container"> 
             <!-- 
@@ -29,6 +30,9 @@
 
                 Viel Spaß ;)
             -->
+        </div>
+        <div id="add_plant">
+            <a href="/add_plant">+</a>
         </div>
     </div>
     <footer>
