--- a/server/templates/main_page.html
+++ b/server/templates/main_page.html
@@ -30,9 +30,9 @@
 
                 Viel Spaß ;)
             -->
-        </div>
-        <div id="add_plant">
-            <a href="/add_plant">+</a>
+            <div class="plant" id="add_plant">
+                <a href="/add_plant">+</a>
+            </div>
         </div>
     </div>
     <footer>
