SP-20 details page data now accessible

--- a/server/templates/main_page.html
+++ b/server/templates/main_page.html
@@ -9,6 +9,7 @@
     <title>Szapp Pflapp</title>
     <link rel="icon" type="image/x-icon" href="../static/img/001-botanic.svg">
     <script
+        type="application/x-javascript"
         src="http://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
@@ -39,5 +40,5 @@
         <a href="/imprint">Imprint</a>
     </footer>
 </body>
-<script src="static/js/main.js"></script>
+<script type="application/x-javascript" src="static/js/main.js"></script>
 </html>
