--- a/server/templates/main_page.html
+++ b/server/templates/main_page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +9,16 @@
     <link rel="stylesheet" href="../static/css/main.css">
     <title>Szapp Pflapp</title>
     <link rel="icon" type="image/x-icon" href="../static/img/001-botanic.svg">
-    <script
-        type="application/x-javascript"
-        src="http://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous">
+    <script type="application/x-javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
     </script>
 </head>
+
 <body>
     <h1>Szapp-Pflapp</h1>
     <div class="plantlist">
         <!-- macht ihr hier einfach mal ein heading -->
-        <div id="plants_container"> 
+        <div id="plants_container">
             <!-- 
                 in diesen container kommen die Pflanzen daten rein
                 wird über die api und js geregelt
@@ -41,4 +40,5 @@
     </footer>
 </body>
 <script type="application/x-javascript" src="static/js/main.js"></script>
+
 </html>
