Style imprint imprint: SP-19 css: SP-40

--- a/server/templates/imprint.html
+++ b/server/templates/imprint.html
@@ -5,13 +5,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../static/css/style_01.css">
+        <link rel="stylesheet" href="../static/css/main.css">
         <title>Szapp Pflapp</title>
         <link rel="icon" type="image/x-icon" href="../static/img/001-botanic.svg">
     </head>
 
-    <body>
-        <p class="heading"><strong>Impressum</strong></p>
+    <body id="imprint">
+        <h2>Impressum</h2>
         <p>
             Szapp Pflapp GmbH<br>
             Kaiserstraße 42<br>
