--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -14,6 +14,8 @@
  body * {
      font-family: Arial, Helvetica, sans-serif;
      border-radius: 30px;
+     color: #FFFFFF;
+     margin: 1%;
  }
 
  h1 {
@@ -32,7 +34,6 @@
      font-style: normal;
      font-size: 3em;
      color: #a9ba5a;
-     margin: 1%;
  }
 
  a {
@@ -131,4 +132,12 @@
 
  footer * {
      font-size: larger;
+ }
+
+ /* ======= */
+ /* IMPRINT */
+ /* ======= */
+ #imprint *{
+     text-align: left;
+     font-size: x-large;
  }
