Emphasize all tiles on hover / focus / active SP-28

--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -109,6 +109,20 @@
      justify-content: center;
  }
 
+ .plant:focus {
+     box-shadow: #c2d666 0 0 0 1.5px inset, #62711c 0 2px 4px, #62711c 0 7px 13px -3px, #c2d666 0 -3px 0 inset;
+ }
+
+ .plant:hover {
+     box-shadow: #62711c 0 4px 8px, #62711c 0 7px 13px -3px, #c2d666 0 -3px 0 inset;
+     transform: translateY(-2px);
+ }
+
+ .plant:active {
+     box-shadow: #c2d666 0 3px 7px inset;
+     transform: translateY(2px);
+ }
+
  #add_plant>a {
      text-decoration: none;
      color: #353535;
@@ -137,7 +151,7 @@
  /* ======= */
  /* IMPRINT */
  /* ======= */
- #imprint *{
+ #imprint * {
      text-align: left;
      font-size: x-large;
  }
