Make all tiles completely clickable SP-42 SP-43

--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -73,6 +73,8 @@
      min-width: 20rem;
      max-width: fit-content;
      max-height: fit-content;
+     text-decoration: none;
+     opacity: 100%;
  }
 
  .plant>ol {
@@ -102,13 +104,6 @@
      color: #007acc;
  }
 
- #add_plant {
-     display: flex;
-     align-items: center;
-     float: inline-end;
-     justify-content: center;
- }
-
  .plant:focus {
      box-shadow: #c2d666 0 0 0 1.5px inset, #62711c 0 2px 4px, #62711c 0 7px 13px -3px, #c2d666 0 -3px 0 inset;
  }
@@ -123,8 +118,11 @@
      transform: translateY(2px);
  }
 
- #add_plant>a {
-     text-decoration: none;
+ #add_plant {
+     display: flex;
+     align-items: center;
+     float: inline-end;
+     justify-content: center;
      color: #353535;
      font-size: 55pt;
  }
