--- a/server/templates/main_page.html
+++ b/server/templates/main_page.html
@@ -30,9 +30,9 @@
 
                 Viel Spaß ;)
             -->
-            <div class="plant" id="add_plant">
-                <a href="/add_plant">+</a>
-            </div>
+            <a href="/add_plant" class="plant" id="add_plant">
+                +
+            </a>
         </div>
     </div>
     <footer>
