--- a/server/templates/plant.html
+++ b/server/templates/plant.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Plants Detail Page {{ plant_id }}</h1>
     <p id="plant_id_field" hidden>{{ plant_id }}</p>
-    <button id="delete">Delete</button>
+    <button id="delete" class="btn">Delete</button>
 </body>
 <script type="application/x-javascript" src="../static/js/details.js"></script>
 
