--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <form method="get" action="/main_page">
-        <button id="btnStart">Starten</button>
+        <button id="btnStart" class="btn">Starten</button>
     </form>
 </body>
 
