--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -1,6 +1,13 @@
  /* * {
     border: 1px solid red;
 } */
+:root {
+    --green: #a9ba5a;
+    --white: #FFFFFF;
+    --dark:#353535;
+    --grey:#5b5b5b;
+    --orange:#d79544;
+}
 
  .hidden {
      visibility: hidden;
@@ -8,13 +15,13 @@
 
  /* GENERAL STYLE */
  body {
-     background: #353535;
+     background: var(--dark);
  }
 
  body * {
      font-family: Arial, Helvetica, sans-serif;
      border-radius: 30px;
-     color: #FFFFFF;
+     color: var(--white);
      margin: 1%;
  }
 
@@ -25,7 +32,7 @@
      font-style: normal;
      font-size: 5em;
 
-     color: #a9ba5a;
+     color: var(--green);
 
  }
 
@@ -33,7 +40,7 @@
      text-align: left;
      font-style: normal;
      font-size: 3em;
-     color: #a9ba5a;
+     color: var(--green);
  }
 
  a {
@@ -43,7 +50,7 @@
      font-size: 24px;
      line-height: 29px;
 
-     color: #FFFFFF;
+     color: var(--white);
 
      opacity: 0.7;
  }
@@ -51,7 +58,7 @@
 
  /* SPECIAL ITEMS */
  .details {
-     background: #5b5b5b;
+     background: var(--grey);
      width: 90vw;
      min-height: 20vh;
  }
@@ -65,9 +72,13 @@
      /* grid-template-columns: repeat(3, 1fr); */
  }
 
+.dry {
+    background-color: var(--orange)!important;
+}
+
  .plant {
-     background: #a9ba5a;
-     border: 2px solid #353535;
+     background-color: var(--green);
+     border: 2px solid var(--dark);
      margin: 1rem;
      padding: 10%;
      min-width: 20rem;
@@ -91,7 +102,7 @@
 
  .plant>ol li:first-child {
      font-size: xx-large;
-     color: #5b5b5b;
+     color: var(--grey);
  }
 
  .plant>ol li img {
@@ -118,12 +129,17 @@
      transform: translateY(2px);
  }
 
+ .dry.plant:hover {
+    box-shadow:#71261c 0 4px 8px, #865315 0 7px 13px -3px, #ca6c14 0 -3px 0 inset;
+    transform: translateY(-2px) !important;
+ }
+
  #add_plant {
      display: flex;
      align-items: center;
      float: inline-end;
      justify-content: center;
-     color: #353535;
+     color: var(--dark);
      font-size: 55pt;
  }
 
