--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -1,6 +1,6 @@
  /* * {
-    border: 1px solid red;
-} */
+     border: 1px solid red;
+ } */
 
  .hidden {
      visibility: hidden;
@@ -48,13 +48,42 @@
      opacity: 0.7;
  }
 
+ /* BUTTON */
+ .btn {
+     font-size: x-large;
+     max-width: fit-content;
+     max-height: fit-content;
+     padding: 1rem;
+     background-color: #62711c;
+ }
 
- /* SPECIAL ITEMS */
+ .btn:hover {
+     background-color: #ba5a5a;
+ }
+
+ /* DETAILS */
  .details {
      background: #5b5b5b;
-     width: 90vw;
+     width: fit-content;
      min-height: 20vh;
+     max-height: fit-content;
+     padding: 3rem 4rem;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
  }
+
+ .details * {
+     margin: 1rem 0;
+     text-align: center;
+ }
+
+ .details #creation {
+     font-size: x-large;
+     margin-bottom: 5rem;
+ }
+
+ /* PLANTS */
 
  #plants_container {
      display: grid;
