--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -79,6 +79,29 @@
      transform: translateY(2px);
  }
 
+ /* REMOVE-BUTTON */
+ .btn#delete {
+    font-size: x-large;
+    max-width: fit-content;
+    max-height: fit-content;
+    padding: 1rem;
+    background-color: #711c1c;
+}
+
+btn:focus#delete {
+    box-shadow: #d66666 0 0 0 1.5px inset, #711c1c 0 2px 4px, #711c1c 0 7px 13px -3px, #d66666 0 -3px 0 inset;
+}
+
+.btn:hover#delete {
+    box-shadow: #711c1c 0 4px 8px, #711c1c 0 7px 13px -3px, #d66666 0 -3px 0 inset;
+    transform: translateY(-2px);
+}
+
+.btn:active#delete {
+    box-shadow: #d66666 0 3px 7px inset;
+    transform: translateY(2px);
+}
+
  /* DETAILS */
  .details {
      background: #5b5b5b;
