--- a/server/templates/plant.html
+++ b/server/templates/plant.html
@@ -16,6 +16,7 @@
 <body style = "display: flex; flex-direction: column; align-items: center;">
     <h1>Plants Detail Page {{ plant_id }}</h1>
     <p id="plant_id_field" hidden>{{ plant_id }}</p>
+    <button id="update" class="btn">Edit</button>
     <button id="delete" class="btn">Delete</button>
 </body>
 <script type="application/x-javascript" src="../static/js/details.js"></script>
