--- a/server/templates/main_page.html
+++ b/server/templates/main_page.html
@@ -12,12 +12,28 @@
     <script type="application/x-javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
     </script>
+
+    <link rel="stylesheet" href="../static/css/wave.css">
+    <style>
+        /* Height is fixed at10% rn. HAS TO CHANGE FOR EVERY PLANT!!! */
+        .wave {
+            background: linear-gradient(to bottom, var(--green) calc(99.8% - 10%), var(--blue) calc(99.8% - 10%));
+        }
+
+        .wave::before {
+            bottom: 10%;
+        }
+
+        .wave::after {
+            bottom: 10%;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Szapp-Pflapp</h1>
-        <div id="plants_container">
-            <!-- 
+    <div id="plants_container">
+        <!-- 
                 in diesen container kommen die Pflanzen daten rein
                 wird über die api und js geregelt
                 wie genau muss ich mir noch überlegen
@@ -28,9 +44,9 @@
 
                 Viel Spaß ;)
             -->
-            <a href="/add_plant" class="plant" id="add_plant">
-                +
-            </a>
+        <a href="/add_plant" class="plant" id="add_plant">
+            +
+        </a>
     </div>
     <footer>
         <a href="/imprint">Imprint</a>
