repaired color change of plants tile

--- a/server/templates/main_page.html
+++ b/server/templates/main_page.html
@@ -20,6 +20,10 @@
             background: linear-gradient(to bottom, var(--green) calc(99.8% - 10%), var(--blue) calc(99.8% - 10%));
         }
 
+        .wave.dry {
+            background: linear-gradient(to bottom, var(--orange) calc(99.8% - 10%), var(--blue) calc(99.8% - 10%));
+        }
+
         .wave::before {
             bottom: 10%;
         }
