--- a/server/static/css/wave.css
+++ b/server/static/css/wave.css
@@ -1,5 +1,10 @@
 .wave {
     position: relative;
+    background: linear-gradient(to bottom, var(--green) calc(99.8% - var(--percentage)), var(--blue) calc(99.8% - var(--percentage)));
+}
+
+.wave.dry {
+    background: linear-gradient(to bottom, var(--orange) calc(99.8% - var(--percentage)), var(--blue) calc(99.8% - var(--percentage)));
 }
 
 .wave::before {
@@ -12,6 +17,7 @@
     background-size: 20px 20px;
     background-image:
         radial-gradient(circle at 10px -5px, transparent 12px, var(--blue) 13px);
+    bottom: var(--percentage);
 }
 
 .wave::after {
@@ -24,4 +30,5 @@
     background-size: 40px 20px;
     background-image:
         radial-gradient(circle at 10px 15px, var(--blue) 12px, transparent 13px);
+    bottom: var(--percentage);
 }
