show name of plant instead of id

--- a/server/templates/plant.html
+++ b/server/templates/plant.html
@@ -23,7 +23,7 @@
 
 <body>
     <div style="display: flex; flex-direction: column; align-items: center;">
-        <h1>Plants Detail Page {{ plant_id }}</h1>
+        <h1 id="details_header">Details page for </h1>
         <p id="plant_id_field" hidden>{{ plant_id }}</p>
         <div class="btn_bar">
             <button id="update" class="btn">Edit</button>
